@@ -77,6 +77,7 @@
       <class name="test.configuration.VerifySuiteTest" />
       <class name="test.annotationtransformer.AnnotationTransformerTest" />
       <class name="test.configuration.MultipleBeforeGroupTest" />
+      <class name="test.configuration.BaseGroupsTest" />
     </classes>
   </test>
   
